Closed
Bug 166595
Opened 23 years ago
Closed 23 years ago
prompted to save a file twice when downloading with shift-click on ftp link
Categories
(Core Graveyard :: Networking: FTP, defect)
Core Graveyard
Networking: FTP
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: frank, Assigned: dougt)
References
()
Details
Attachments
(1 file)
|
2.51 KB,
patch
|
dougt
:
review+
darin.moz
:
superreview+
jesup
:
approval+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.1b) Gecko/20020830
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.1b) Gecko/20020830
Click "Save" on save dialog and download initiates - progress bar appears -
second save dialog appears - click "Save" and second progress dialog appears
underneath it. Both downloads (same file) appear to be running in tandem with
the second download progress bar slightly behind the first.
Reproducible: Always
Steps to Reproduce:
1.Shift+Left Click file
2.Click "Save"
3.File begins download
4.Second "Save" dialog appears
Actual Results:
File downloads fine.
Expected Results:
Open one "Save" dialog and then one progress indicator dialog.
Comment 1•23 years ago
|
||
seen this in recent builds. weird can't find a dupe of this
Assignee: dougt → blaker
Component: Networking: File → Download Manager
QA Contact: benc → sairuh
Summary: Hold Shift+Click on file to initiate download → prompted to save a file twice when downloading
Comment 2•23 years ago
|
||
I tried to dup this on Win98SE (build 2002090408 TRUNK) and couldn't do it. I
assume this means it's a Linux only problem.
| Reporter | ||
Comment 3•23 years ago
|
||
I just downloaded and installed the latest trunk (build ID 2002090408) under
Linux in case it's been fixed recently - it still happens with today's build.
The second Save dialog and progress only appear when navigator download
preferences are set to "open a progress dialog". When set to use download
manager everything is fine.
Comment 4•23 years ago
|
||
I was using the Download Manager, however switching to Progress Dialog still
didn't dup the problem on Win98SE. What you need to another Linux user to have a
look.
Comment 5•23 years ago
|
||
I was seeing this too (also on Linux), on a build from, I think, last Thursday
(8/29). But I upgraded to a build from this week and I'm no longer seeing it.
It was really frustrating when it was happening (I got very friendly with Copy
Link Location and wget for a few days, though I eventually figured out that
cancelling the second dialog seemed to make the download work okay).
If I see it again I'll come back here and confirm the bug, but I haven't seen it
yet on the downloads I've done yesterday or today (with builds from yesterday
and today).
Comment 6•23 years ago
|
||
*** Bug 166720 has been marked as a duplicate of this bug. ***
Comment 8•23 years ago
|
||
Further testing on my system (linux mozilla 1.1b 2002090312) with a DSL
connection determined that the system does not hangs but it actually starts
_TWO_ concurrent downloads of the requested file. Each occurance runs at 50% (33
KBytes/Sec) of my normal d/l speed. (66 KBytes/Sec) Sometimes the download
indicator fails to go to 100% complete and at least "seems" to hang at 98 - 99
%. In my case I sometimes get only one progress screen with the single download
progress bar alternating between the two separate downloads, one slightly ahead
of the other.
The complete ID of the mozilla Version I downloaded and installed is;
mozilla-i686-pc-linux-gnu-sea.tar.gz
Dated (in the config.ini file) 2002090312
Comment 9•23 years ago
|
||
Additional Info;
Dual download prompts occur _only_ when download is selected by
<shift><left-mouse> if I just <right-click> download is O.K. with a single
download prompt, after the "view" or "download" prompt.
Art
Comment 10•23 years ago
|
||
in my last (additional comments #9) for ,"right-click" replace with
"left-mouse-click"
Comment 11•23 years ago
|
||
Same results reported above on mozilla-1.1b-sea-090408
Comment 12•23 years ago
|
||
thanks Arthur! I see this behavior with linux trunk build 2002090421 with
shift-left-click.
Also note that it seems to only occur with FTP (rpmfind.net actually gives you
ftp sites)
regression between builds 2002081104 and 2002081304
marking NEW
==> file handling
Assignee: blaker → law
Status: UNCONFIRMED → NEW
Component: Download Manager → File Handling
Ever confirmed: true
Summary: prompted to save a file twice when downloading → prompted to save a file twice when downloading with shift-click on ftp link
Comment 13•23 years ago
|
||
Ugh. This is an FTP regression from bug 162326... The ftp channel is calling
OnStartRequest() twice and the link checker happily notifies us twice.
Assignee: law → dougt
Component: File Handling → Networking: FTP
OS: Linux → All
QA Contact: sairuh → benc
Hardware: PC → All
Comment 14•23 years ago
|
||
I didn't want to change all the StopProcessing() callers, hence the default
value for aPreventNotification... The other alternative is to not drop the
mDRequestForwarder until _after_ we have called StopProcessing()
Comment 15•23 years ago
|
||
*** Bug 167055 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 16•23 years ago
|
||
Comment on attachment 98108 [details] [diff] [review]
Proposed patch
r=dougt
looks good.
Attachment #98108 -
Flags: review+
Comment 17•23 years ago
|
||
Comment on attachment 98108 [details] [diff] [review]
Proposed patch
sr=darin
Attachment #98108 -
Flags: superreview+
Comment 19•23 years ago
|
||
Attachment #98108 -
Flags: approval+
| Assignee | ||
Comment 20•23 years ago
|
||
bz, thanks for fixing this bug!!
Checking in nsFtpConnectionThread.cpp;
/cvsroot/mozilla/netwerk/protocol/ftp/src/nsFtpConnectionThread.cpp,v <--
nsFtpConnectionThread.cpp
new revision: 1.245; previous revision: 1.244
done
Checking in nsFtpConnectionThread.h;
/cvsroot/mozilla/netwerk/protocol/ftp/src/nsFtpConnectionThread.h,v <--
nsFtpConnectionThread.h
new revision: 1.100; previous revision: 1.99
done
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•2 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•