Bug 166595 prompted to save a file twice when downloading with shift-click on ftp link.  patch by bzbarsky@mit.edu, r=me, sr=darin, a=rjesup@wgate.com